--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
         <button id="check" class="check-btn">Check Answer</button>
         <div id="status" class="status-icon"></div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <a target="_blank" href="https://github.com/StevenDStanton/petals-around-the-rose/tree/master">Github Repo</a>
+            </div>
+            <div class="footer-section">
+                <p>© <span id="currentYear"></span> The Simple Dev</p>
+            </div>
+            <div class="footer-section">
+                <p>Version 1.0.5</p>
+            </div>
+        </div>
+    </footer>
     
 </body>
 
